fixed wave z-index

--- a/src/components/pages/homepage/homepage.styles.scss
+++ b/src/components/pages/homepage/homepage.styles.scss
@@ -19,7 +19,7 @@
     overflow: hidden;
     line-height: 0;
     transform: rotate(180deg);
-    z-index: 2;
+    z-index: 1;
   }
 
 .custom-shape-divider-bottom-1642097161 svg {
